@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-PluginBundle-DAGOLDEN
 
 {{$NEXT}}
 
+    - document how to use AutoMetaResources for github to remind myself
+
 0.032     2012-08-08 20:26:15 America/New_York
 
     - bumped Pod::Wordlist::hanekomu prereq version
